--- a/Lecture Mtd.html
+++ b/Lecture Mtd.html
@@ -31,7 +31,7 @@
                 <div class="mbr-navbar__hamburger mbr-hamburger"><span class="mbr-hamburger__line"></span></div>
                 <div class="mbr-navbar__column mbr-navbar__menu">
                     <nav class="mbr-navbar__menu-box mbr-navbar__menu-box--inline-right">
-                        <div class="mbr-navbar__column"><ul class="mbr-navbar__items mbr-navbar__items--right mbr-buttons mbr-buttons--freeze mbr-buttons--right btn-decorator mbr-buttons--active mbr-buttons--only-links"><li class="mbr-navbar__item"><a class="mbr-buttons__link btn text-white" href="Home.html">Home<br><br></a></li><li class="mbr-navbar__item"><a class="mbr-buttons__link btn text-white" href="About.html">About APP<br><br></a></li><li class="mbr-navbar__item"><a class="mbr-buttons__link btn text-white" href="Content.html">Content<br><br></a></li> <li class="mbr-navbar__item"><a class="mbr-buttons__link btn text-white" href="https://mobirise.com">Help<br><br></a></li></ul></div>
+                        <div class="mbr-navbar__column"><ul class="mbr-navbar__items mbr-navbar__items--right mbr-buttons mbr-buttons--freeze mbr-buttons--right btn-decorator mbr-buttons--active mbr-buttons--only-links"><li class="mbr-navbar__item"><a class="mbr-buttons__link btn text-white" href="Home.html">Home<br><br></a></li><li class="mbr-navbar__item"><a class="mbr-buttons__link btn text-white" href="About.html">About APP<br><br></a></li><li class="mbr-navbar__item"><a class="mbr-buttons__link btn text-white" href="Problem Solving Mtd.html">Content<br><br></a></li> <li class="mbr-navbar__item"><a class="mbr-buttons__link btn text-white" href="Help.html">Help<br><br></a></li></ul></div>
                         
                     </nav>
                 </div>
@@ -40,7 +40,7 @@
     </div>
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">free easy website builder</a></section><section class="mbr-section mbr-after-navbar" id="header3-29">
+<section class="engine"><a rel="external" href="https://mobirise.com">html page builder</a></section><section class="mbr-section mbr-after-navbar" id="header3-29">
     <div class="mbr-section__container container mbr-section__container--isolated">
         <div class="mbr-header mbr-header--wysiwyg row">
             <div class="col-sm-8 col-sm-offset-2">
